# X2Chess

./: .gitignore  CLAUDE.md  README.md
.cursor/: rules
.cursor/rules/: architecture-adr-manual-maintenance.mdc  architecture-manual-maintenance.mdc  component-contract.mdc  dual-target-architecture.mdc  i18n-gui-alignment.mdc  main-composition-boundary.mdc  manual-governance.mdc  primary-workspace-no-worktrees.mdc  public-code-documentation.mdc  setup-manual-maintenance.mdc  ui-style-and-theming.mdc  user-manual-maintenance.mdc  worktree-sync-and-visibility.mdc
.github/workflows/: ci.yml  release.yml
backend/app/: default-config.json  main.py
boards/: index.ts  package.json
boards/domain/: board_profile.ts  board_types.ts
boards/protocol/: millennium_protocol.ts
dev/architecture/: health-log.md  (+1 more)
doc/: README.md  TODO-manual.qmd  architecture-adr-manual.qmd  architecture-manual.qmd  architecture-manual.tex  diy-manual.qmd  manuals-index.md  setup-manual.qmd  user-manual.qmd
engines/: index.ts  package.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/permissions/: app-commands.toml
frontend/src-tauri/src/: main.rs
resource/: index.ts
scripts/: arch-check.sh  build_eco_data.ts  check_dependency_graph.sh  launch.sh  setup_dev_environment_macos.sh  setup_tauri_toolchain_macos.sh
spec/: ehr-concept.md
update-server/: README.md
(+1058 files in other folders)
