[package]
name = "x2chess-desktop"
version = "0.1.0"
description = "X2Chess desktop shell"
authors = ["X2Chess"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
devtools = []
